--- a/package.json
+++ b/package.json
@@ -6,24 +6,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.5",
-    "@tailwindcss/postcss": "^4.1.3",
     "classnames": "^2.5.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "gray-matter": "^4.0.3",
-    "next": "15.3.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "15.0.2",
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.1",
-    "@types/react": "npm:types-react@19.0.0-alpha.3",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3",
-    "typescript": "^5.8.3"
+    "@types/node": "^20.14.8",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2"
   }
 }
