--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.1",
+    "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "esbuild": "^0.25.2",
